# ScorpionSatin

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ScorpionSatin.cmake  build.bat
docs/: camera-integration.md  engine-architecture.md
docs/architecture/: build-and-hotreload.md  ecs.md  editor.md  lights.md  navmesh.md  networking.md  physics.md  renderer.md  scaling.md  server-headless.md
include/: Camera.h  EngineCore.h  Lights.h  LoadTestScene.h  MeshLoader.h  MeshPrimitives.h  PBRMaterial.h  RenderDevice.h  Renderer.h  RtxgiBridge.h  SceneUniforms.h  Transform.h
modules/core/: CoreSystems.cpp  CoreSystems.h
modules/net/: MsQuicWrapper.cpp  MsQuicWrapper.h
modules/rhi/: RtxgiBridge.cpp  RtxgiBridge.h
shaders/: basic.frag  basic.vert  pbr.frag  pbr.vert  pbr_gbuffer.frag  ray_miss.rmiss  shadow.frag  shadow.vert
src/collision/: CMakeLists.txt  SpatialGrid.cpp
src/core/: Main.cpp  ServerMain.cpp
src/ecs/: CMakeLists.txt  CameraMatrixSystem.cpp  CameraUBO.cpp  CoreSystems.cpp  CoreSystems.h  EditorCameraSystem.cpp  GamePlugin.cpp  InputState.cpp  ThirdPersonCameraSystem.cpp
src/editor/: EditorPanels.cpp
src/mesh/: CMakeLists.txt  MeshLoader.cpp  Primitives.cpp
src/navmesh/: CMakeLists.txt  NavMeshRuntime.cpp
src/network/: CMakeLists.txt  MsQuicWrapper.cpp  MsQuicWrapper.h
src/render/: CMakeLists.txt  RenderDevice.cpp  RtxgiBridge.cpp
src/scene/: CMakeLists.txt  LoadTestScene.cpp
